fix horizontal scrolling for daygrid/timegrid, fix paddingBottom for scroll-syncing

--- a/standard/packages/timegrid/src/styles/timegrid.css
+++ b/standard/packages/timegrid/src/styles/timegrid.css
@@ -11,4 +11,5 @@
 
 .fcnew-timegrid-timed-main {
   flex-grow: 1;
+  min-height: 0; // needed
 }
